<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_titulo" />

        <EditText
            android:id="@+id/pt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_titulo"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tv_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_descripcion" />

        <EditText
            android:id="@+id/pt_descripcion"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine|textPersonName"
            android:singleLine="false" />

        <TextView
            android:id="@+id/tv_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_correo" />

        <EditText
            android:id="@+id/em_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_correo"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_precio" />

        <EditText
            android:id="@+id/nu_precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_precio"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_categoria" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nombre_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_categoria"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/selector_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_but_categoria" />

            <Spinner
                android:id="@+id/sp_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/sp_categoria"
                android:visibility="gone" />

        </LinearLayout>

        <Switch
            android:id="@+id/sw_descuento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_descuento" />

        <LinearLayout
            android:id="@+id/componentePorcentaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/porcentaje_descuento"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_min_descuento"
                android:textAlignment="center" />

            <SeekBar
                android:id="@+id/sb_descuento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="100" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/lbl_max_descuento"
                android:textAlignment="center" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_retiro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_retiro" />

        <TextView
            android:id="@+id/tv_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_direccion" />

        <EditText
            android:id="@+id/pa_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_direccion"
            android:inputType="textPostalAddress" />

        <CheckBox
            android:id="@+id/cb_terminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_terminos" />

        <Button
            android:id="@+id/bu_publicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/lbl_publicar" />

    </LinearLayout>
</ScrollView>